protocols/tests/brave_new_world/signal_asynchrony/signal_async_bug.out
error: The two expressions did not evaluate to the same value
   ┌─ brave_new_world/signal_asynchrony/signal_async.prot:18:15
   │
18 │     assert_eq(data_out, dut.final_resp);
   │               ^^^^^^^^^^^^^^^^^^^^^^^^ LHS Value: 7, RHS Value: 0

Trace 0 failed: Assertion(EqualityFailed { expr1_id: expr6, expr2_id: expr7, value1: ValueOwned(00000000000000000000000000000111), value2: ValueOwned(00000000000000000000000000000000) })
Trace 0 execution failed.
